# inbrief

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  coderabbit.yml  config.example  inbrief.py  oauth_setup.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
tests/: test_inbrief.py
